# winc-rs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  TODO.md
.github/workflows/: benchmark.yml  coverage.yml  pre-commit.yaml  rust.yaml
demos/: Cargo.toml
demos/src/: coap_client.rs  http_client.rs  http_server.rs  http_speed_test.rs  iperf3_client.rs  lib.rs  tcp_server.rs  telnet_shell.rs  udp_client.rs  udp_server.rs
demos/src/iperf3_client/iperf_data/: mod.rs
demos/src/static/: index.html
demos/src/telnet_shell/: errwrap.rs
demos_async/: Cargo.toml
demos_async/src/: http_client.rs  lib.rs
feather/: Cargo.toml  build.rs  regression_test.py
feather/.cargo/: config.toml
feather/examples/: async_blinky.rs  async_connect_saved.rs  async_dns.rs  blinky.rs  bypass_mode.rs  coap_client.rs  connect_network.rs  connect_saved.rs  dns.rs  ethernet.rs  http_client.rs  http_server.rs  http_speed_test.rs  iperf3_client.rs  mdns.rs  oled.rs  ping.rs  prng.rs  provisioning.rs  scan.rs  serial_flasher.rs  ssl.rs  tcp_server.rs  telnet_shell.rs  udp_client.rs  udp_server.rs
feather/examples/ext_tcp_stack/: mod.rs
feather/examples/runner/: mod.rs  stack.rs
feather/src/: init.rs  init2.rs  init_async.rs  lib.rs  shared.rs
feather/src/init/: usb_logging.rs
feather/src/shared/: delay_trait.rs  spi_stream.rs  transfer_spi.rs
feather/tests/: integration.rs
feather_async/: Cargo.toml  memory.x
feather_async/.cargo/: config.toml
feather_async/examples/: blinky.rs  connect_network.rs  connect_saved.rs  dns.rs  http_client.rs  provisioning.rs
feather_async/src/: init.rs  lib.rs  shared.rs
feather_async/src/shared/: error.rs  spi_stream.rs
python/: client.py  mdns.py  mqtt_broker.py  ntp_server.py  server.py  tcp_server.py  udp_server.py
src/: error.rs  lib.rs  manager.rs  nonstd.rs  transfer.rs
src/manager/: chip_access.rs  constants.rs  responses.rs
systick-timer/: Cargo.toml  README.md  build.rs  memory.x
systick-timer/.cargo/: config.toml
systick-timer/examples/: README.md  embassy_time.rs
systick-timer/src/: embassy_driver.rs  lib.rs  timer.rs
winc-rs/: Cargo.toml  README.md
winc-rs/src/: client.rs  error.rs  errors.rs  lib.rs  manager.rs  nonstd.rs  readwrite.rs  socket.rs  stack.rs  transfer.rs
winc-rs/src/async_client/: dns.rs  mod.rs  module.rs  tcp_stack.rs
winc-rs/src/client/: dns.rs  ethernet.rs  flash.rs  ota.rs  prng.rs  ssl.rs  stack_error.rs  tcp_stack.rs  udp_stack.rs  wifi_module.rs
winc-rs/src/manager/: chip_access.rs  constants.rs  event_listener.rs  net_types.rs  registers.rs  requests.rs  responses.rs
winc-rs/src/net_ops/: dns.rs  mod.rs  module.rs  op.rs  tcp_accept.rs  tcp_connect.rs  tcp_receive.rs  tcp_send.rs  udp_receive.rs  udp_send.rs
winc-rs/src/stack/: constants.rs  sock_holder.rs  socket_callbacks.rs  stack_error.rs
winc-rs/src/wifi/: dns.rs  errors.rs  mod.rs  udp_stack.rs
winc-rs/tests/: basic.rs  udp_connect.rs
