[package]
# TODO(1) fix `authors` and `name` if you didn't use `cargo-generate`
authors = ["kaidokert <kaidokert@gmail.com>"]
name = "feather"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = { version ="0.3" , optional = true }
defmt-rtt = { version = "0.4", optional = true }

panic-probe = { version = "0.3.0", optional = true }

feather_m0 = { version = "0.18" , features=["winc"]}
embedded-hal = { version= "1", default-features = false }
nb = { version = "1.0"}

cortex-m-systick-countdown = "0.1.0"

embedded-nal = "=0.9.0"
wincwifi = { path = "../winc-rs", default-features = false }
demos = { path = "../demos", default-features = false }
ssd1306 = { version = "0.10", optional = true }
usb-device = { version = "0.3", optional = true }
usbd-serial = { version = "0.2", optional = true }
log = { version = "0.4.27", optional = true }

ehal_02 = { package= "embedded-hal", version = "0.2.4", optional = true }
rand_core = { version = "0.9", default-features = false, optional = true }
byteorder = { version = "1.0", default-features = false, optional = true }

# Smoltcp
[dependencies.smoltcp]
version = "0.12.0"
default-features = false
features = [
    "proto-ipv4",
    "medium-ethernet",
    "socket-raw",
    "socket-udp",
    "socket-icmp",
    "socket-dhcpv4",
    "socket-dns",
]
optional = true

[[example]]
name = "iperf3_client"
required-features = ["iperf3"]

[[example]]
name = "oled"
required-features = ["oled"]

[[example]]
name = "telnet_shell"
required-features = ["telnet"]

[[example]]
name = "serial_flasher"
required-features = ["flash-rw"]

[[example]]
name = "ssl"
required-features = ["ssl"]

[[example]]
name = "bypass_mode"
required-features = ["external-tcp-stack"]

[features]
# Do most of development and testing with IRQ enabled
default = ["irq", "defmt"] # Use defmt by default, or switch to "log" for USB logging
iperf3 = ["demos/iperf3"]
oled = ["dep:ssd1306"]
telnet = ["demos/telnet"]
irq = ["wincwifi/irq"] # Use Interrupt instead of polling
usb-device = ["dep:usb-device"]
usbd-serial = ["dep:usbd-serial"]
usb = ["dep:usb-device", "dep:usbd-serial", "feather_m0/usb", "dep:ehal_02"] # USB CDC device functionality
log = ["usb", "dep:log", "demos/log", "wincwifi/log"] # USB logging (mutually exclusive with defmt)
defmt = ["dep:defmt", "dep:defmt-rtt", "dep:panic-probe", "panic-probe/print-defmt", "embedded-hal/defmt-03", "wincwifi/defmt", "demos/defmt"]
serial-usb = ["usb"] # USB Serial interface (mutually exclusive with log)
flash-rw = ["serial-usb", "wincwifi/flash-rw"]
ssl = ["wincwifi/ssl"]
bootloader-enabled = []
external-tcp-stack = ["wincwifi/smoltcp", "dep:smoltcp", "dep:rand_core", "wincwifi/rng", "dep:byteorder"]

# cargo build/run
[profile.dev]
# lto = "off"
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
# opt-level = 0         # <-
opt-level = 'z'         # <-
overflow-checks = true  # <-
# panic = "unwind"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 'z'            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
