[package]
authors = ["kaidokert <kaidokert@gmail.com>"]
name = "feather_async"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

feather_m0 = { version = "0.17" , features=["winc"]}
embedded-hal = { version= "1", features = ["defmt-03"]}

wincwifi = { path = "../winc-rs", default-features = false, features=["defmt", "async"] }

embassy-executor = { version = "0.7" , features= ["arch-cortex-m", "executor-thread", "defmt"] }
systick-timer = { version = "0.1",  features=["cortex-m","embassy-time-driver"] }
embassy-time-driver = { version ="0.2" }
embassy-time = { version = "0.4" }
embedded-nal-async = { version = "0.8" }

# cargo build/run
[profile.dev]
# lto = "off"
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
# opt-level = 0         # <-
opt-level = 'z'         # <-
overflow-checks = true  # <-
# panic = "unwind"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
