[package]
name = "systick-timer"
version = "0.1.0"
edition = "2021"
authors = ["kaidokert <kaidokert@gmail.com>"]
documentation = "https://docs.rs/systick-timer"
description = """
64-bit SysTick timer for Cortex-M0
"""
readme = "README.md"
repository = "https://github.com/kaidokert/winc-rs"
homepage = "https://github.com/kaidokert/winc-rs"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.5"
embassy-time-driver = { version = "0.2", optional = true }

[features]
default = []
cortex-m = []
embassy-defaults = [] # Set up a default/demo instance

[package.metadata.docs.rs]
features = ["cortex-m", "embassy-time-driver"]

[dev-dependencies]
cortex-m = { version = "0.7" } #, features= ["critical-section-single-core"]}
embassy-executor = { version = "0.7" } # , features= ["arch-cortex-m", "executor-thread"]}
embassy-time = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
cortex-m-semihosting = { version = "0.5" }

[[example]]
name = "embassy_time"
required-features = [
    "cortex-m",
    "embassy-time-driver",
    "cortex-m/critical-section-single-core",
    "embassy-executor/arch-cortex-m",
    "embassy-executor/executor-thread",
]
