[package]
name = "wincwifi"
version = "0.1.0"
edition = "2021"

[dependencies]
log = {version="0.4.17", default-features = false, optional=true }

# CRC calcs for the over-the-wire firmware
crc-any = { version = "2.4.3", default-features = false }

# Embedded NAL
embedded-nal = "0.9.0"

# Sparsely used, maybe drop
arrayvec =  { version = "0.7.2", default-features = false }

# TODO: Remove
void = { version =  "1", default-features = false }

simple_logger = { version = "4.0.0", default-features = false, optional=true }
defmt = { version = "0.3.2", default-features = false, optional=true }

[dev-dependencies]
test-log = "0.2.11"

[features]
std=["dep:log", "dep:simple_logger"]
defmt = ["dep:defmt"]
default = ["std"]
