[package]
name = "wincwifi"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
authors = ["kaidokert <kaidokert@gmail.com>"]
documentation = "https://docs.rs/wincwifi"
description = """
WINC1500 Wifi chip embedded driver
"""
readme = "../README.md"
repository = "https://github.com/kaidokert/winc-rs"
homepage = "https://github.com/kaidokert/winc-rs"
keywords = [
    "embedded",
    "no-std",
    "wifi",
    "winc1500",
    "atwinc1500"
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
log = {version="0.4.17", default-features = false, optional=true }

# CRC calcs for the over-the-wire firmware
crc-any = { version = "2.4.3", default-features = false }

# Embedded NAL
embedded-nal = "0.9.0"

# TODO: Sparsely used, maybe drop
arrayvec =  { version = "0.7.2", default-features = false }

# TODO: Remove maybe ?
void = { version =  "1", default-features = false }

defmt = { version = "0.3.2", default-features = false, optional=true }

[dev-dependencies]
test-log = "0.2.11"

[features]
std=["dep:log"]
defmt = ["dep:defmt"]
default = ["std"]
